# Taller-Procesamiento-y-analisis-temporal-de-gases-en-Hermetia-illucens-31.03

./: Cargo.toml  README.md
data/processed/: datos_limpios.csv  resumen_pendientes.csv
data/processed/datos_por_dia/: 2025-08-10.csv  2025-08-18.csv  2025-08-19.csv  2025-08-20.csv  2025-08-22.csv  2025-08-25.csv  2025-09-09.csv  2025-09-11.csv  2025-09-13.csv  2025-09-17.csv
reports/: analisis_por_dia.md  bitacora_limpieza.md  incidencias.md
src/: lib.rs
